Refactor of Booking and Location
- Updated UserRole enum to remove unnecessary comments and add author information.
- Renamed getCar() method to getCars() in Booking class for clarity.
- Added BookingDTO class to facilitate data transfer for booking information.
- Introduced LocationDTO class for location data transfer.
- Implemented BookingMapper and LocationMapper for converting between entities and DTOs.
- Enhanced CarDTO to include booking-related fields.
- Updated BookingFactory to accept dynamic booking status.
- Modified IBookingRepository to support finding bookings by car.
- Improved error handling in BookingService for booking cancellation.
- Added author information to various classes and methods for better documentation.
- Introduced InsuranceDTO and updated InsuranceMapper for insurance data transfer.
- Added new fields and methods in CarMapper to handle booking details.