@@ -1,6 +1,7 @@
 package za.co.carhire.controller.reservation;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -15,11 +16,14 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import za.co.carhire.domain.reservation.Booking;
+import za.co.carhire.dto.reservation.BookingDTO;
+import za.co.carhire.mapper.reservation.BookingMapper;
 import za.co.carhire.service.reservation.impl.BookingService;
 
 /**
 Lisakhanya Zumana (230864821)
 Date: 25/05/2025
+Updated: 08/10/2025 - Added DTO support for better API responses
  */
 
 @RestController
@@ -30,17 +34,27 @@ public class BookingController {
     private BookingService bookingService;
 
     @PostMapping("/create")
-    public ResponseEntity<Booking> create(@RequestBody Booking booking) {
-        return new ResponseEntity<>(bookingService.create(booking), HttpStatus.CREATED);
+    public ResponseEntity<BookingDTO> create(@RequestBody Booking booking) {
+        Booking created = bookingService.create(booking);
+        return new ResponseEntity<>(BookingMapper.toDTO(created), HttpStatus.CREATED);
     }
+
     @GetMapping("/read/{id}")
-    public Booking read(@PathVariable int id){
-        return bookingService.read(id);
+    public ResponseEntity<BookingDTO> read(@PathVariable int id){
+        Booking booking = bookingService.read(id);
+        if (booking == null) {
+            return ResponseEntity.notFound().build();
+        }
+        return ResponseEntity.ok(BookingMapper.toDTO(booking));
     }
 
     @PutMapping("/update")
-    public ResponseEntity<Booking> update(@RequestBody Booking booking){
-        return new ResponseEntity<>(bookingService.update(booking), HttpStatus.OK);
+    public ResponseEntity<BookingDTO> update(@RequestBody Booking booking){
+        Booking updated = bookingService.update(booking);
+        if (updated == null) {
+            return ResponseEntity.notFound().build();
+        }
+        return ResponseEntity.ok(BookingMapper.toDTO(updated));
     }
 
     @DeleteMapping("/delete/{id}")
@@ -50,14 +64,17 @@ public class BookingController {
     }
 
     @DeleteMapping("/cancel/{id}")
-    public ResponseEntity<Booking> cancel(@PathVariable int id){
-        bookingService.cancelBooking(id);
-        return new ResponseEntity<>(HttpStatus.OK);
+    public ResponseEntity<BookingDTO> cancel(@PathVariable int id){
+        Booking cancelled = bookingService.cancelBooking(id);
+        return ResponseEntity.ok(BookingMapper.toDTO(cancelled));
     }
 
     @GetMapping("/all")
-    public ResponseEntity<List<Booking>> getAll() {
-        return ResponseEntity.ok(bookingService.getBookings().stream().toList());
+    public ResponseEntity<List<BookingDTO>> getAll() {
+        List<BookingDTO> bookings = bookingService.getBookings().stream()
+                .map(BookingMapper::toDTO)
+                .collect(Collectors.toList());
+        return ResponseEntity.ok(bookings);
     }
 
 }
